Add media viewer access projection
